Bug 78957 - FILESAVE: <wp:extent> "cy" height exceed the limit in header.xml
Summary: FILESAVE: <wp:extent> "cy" height exceed the limit in header.xml
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.3.0.0.alpha0+ Master
Hardware: x86-64 (AMD64) Windows (All)
: medium normal
Assignee: Yogesh Bharate
URL:
Whiteboard: BSA target:4.3.0
Keywords:
Depends on:
Blocks:
 
Reported: 2014-05-20 11:09 UTC by Yogesh Bharate
Modified: 2014-05-22 13:45 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
height exceed the limit. (109.67 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-05-20 11:09 UTC, Yogesh Bharate
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Yogesh Bharate 2014-05-20 11:09:11 UTC
Created attachment 99402 [details]
height exceed the limit.

Problem description: 

Steps to reproduce:
1. Open in LibreOffice
2. Click File -> Save As (Microsoft Word 2007/2010 (.docx))
3. Open saved file in MS Office 2010.

Current behavior:
File corrupt dialog is shown.

Expected behavior:
File should open without any error.

Note :
1. If we RT this attached document on Windows daily build then 
RT document get corrupted while opening in MS Office 2010.

2. posOffset Value is exceed the limit cause error on 20 May 2014.
[ libo-master~2014-05-20_07.23.58_LibreOfficeDev_4.3.0.0.alpha1_Win_x86 ]

3. extent height exceed the limit error on 19 May 2014 Windows daily build
[ Build ID: dd0f844728a53a337233a3c687b792e725803da5
TinderBox: Win-x86@42, Branch:master, Time: 2014-05-19_06:36:39 ]

Operating System: All
Version: 4.3.0.0.alpha0+ Master
Comment 1 Commit Notification 2014-05-22 09:25:22 UTC
Yogesh Bharate committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f7bcaa98827b086f9e9a541b75654a14cf69e343

fdo#78957 Corruption - <wp:extent> "cy" height exceed the limit in header.xml



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 2 retired 2014-05-22 13:45:10 UTC
Hi Yogesh, thanks for your contribution. They are very welcome!

Tested on OSX 10.9.3.

LO 4.2.4.2 save as docx, open with word > error and empty file openes.

LO 4.4.0.0 save as docx, open with word > no error, opens fine.

Verified + Fixed

General note: if you decide to work on a bug you can assign yourself to the bug, so other devs know they don't have to take it.
If you think your fix fixes the bug you can update the bug to fixed resolved.

Please re-open if I'm mistaken, missed something or things are still behaving differnt in the windows world.