fdo#78957 Corruption - <wp:extent> "cy" height exceed the limit in header.xml

Problem Description:

1. On 19th  May windows daily build
[Build ID: dd0f844728a53a337233a3c687b792e725803da5, TinderBox: Win-x86@42, Branch:master],
if we RT document, RT get corrupted due to the exceeding the limit of extend height & width.
2. As per ECMA standard, extend height & width is of type long, but MSO only
support int32.Hence added code changes to check the same.
3. On 20th May windows daily build
[Build ID: f3a46244a07b76d633ccc7f83da3fa502612e978, TinderBox: Win-x86@42, Branch:master],
if we RT document, it get corrupted due to exceeding value of posOffset.
4. Added code changes to make sure posOffset value is within the allowed range.

Reviewed on:
	https://gerrit.libreoffice.org/9424

Change-Id: Ib0b55314f54c51f39a492485992356f71eb062e3